--- a/index.css
+++ b/index.css
@@ -66,7 +66,12 @@ p {
     padding-bottom: 92px;
 }
 
-.schedule, .challenge {
+.schedule {
+    width: 100%;
+    height: 585px;
+}
+
+.challenge {
     width: 100%;
     height: 585px;
 }
